mise en place de la section titre

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Mon Site</title>
 </head>
 <body>
+    <section>
+
+        <h1>
+            titre
+        </h1>
+         <p>
+             CV Kassirath
+        </p>
+
+    </section>
     
 </body>
 </html>
