--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Mon Site</title>
 </head>
 <body>
-    
+    <section>
+        <p>
+            <li>NOM : RAZAKI</li>
+            <li> PRENON: Kassiratou</li>
+            <li>SEXE : Feminin</li>
+            <li> date de naissance : 2001-17-10</li>
+             
+        </p>
+
+    </section>
 </body>
 </html>
