mise en place de la section experiences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Mon Site</title>
 </head>
 <body>
-    
+    <section>
+        
+     <h1>EXPERIENCES</h1>
+     <p> En PHP : Création d'un site web pour gerer l'achat des articles 
+         En C : Création d'un jeu "Le mot long"
+         En JAVA :  Developpement d' un logciel pour gérer le stock des voiture sur une parc et des ventes
+     </p>
+    </section>
 </body>
 </html>
