mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Mon Site</title>
 </head>
 <body>
-    
+    <section>
+        <h1> Assiciation</h1>
+        <p>
+            je n'ai pas d'association
+        </p>
+    </section>
 </body>
 </html>
